--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+<read>
+<meta charset="UFT-8">
+<litle>Retro-Onda</litle>
+<link real="staylesheet" href="style.css"
+</read>
+<body class="bg">
+<h1>Retrô-Onda:Jogos de ontem. Diversão de hoje. </h1>>
+<h2>Pagina do Curso de formação de Pensamento computacional - Turma N </h2>
+<h3>Proposição de site de jogos retros - Consoles e arcades</h3>
+<p>Essa página está sendo elaborada com o intuito de servir de treinamento na criação de página na linguagem 
+HTML.</p>
+<p><strong><a href="https:"
 
 
 
