--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
 <h3>Proposição de site de jogos retros - Consoles e arcades</h3>
 <p>Essa página está sendo elaborada com o intuito de servir de treinamento na criação de página na linguagem 
 HTML.</p>
-<p><strong><a href="https:"
+<p><strong><a href="https:"https://www.emulatorgames.net/net/roms/name/"litle="Arcade">Arcade</a>-> hre="https://pt.wikpedia.org/wiki/Lista de consoles de jogos eletr%C3%B4nicos"
+    litle="Consoles">Consoles</a> - <a href="https://www.mybandonware.com/
+    litle= "abandonware games</a></a><strong></p>
+        <h4>Nossas propriedades:</h4>
+
+        <center>
+        div class="row">
+        <div class="coluna">
+        <a href="https://www.emulatorgames.net/">
+            <img src="emulatores.jpg" alt="emulatores"> ltle="Emuladores" style= "width:80%">
+        </a>
+        </div>
+        <div class="coluna">
+            <a href="https://wwwemulatorgames.net/roms/sega-geneisis">
+                
+
+
 
 
 
