--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<read>
-<meta charset="UFT-8">
-<litle>Retro-Onda</litle>
-<link real="staylesheet" href="style.css"
-</read>
-<body class="bg">
-<h1>Retrô-Onda:Jogos de ontem. Diversão de hoje. </h1>>
-<h2>Pagina do Curso de formação de Pensamento computacional - Turma N </h2>
-<h3>Proposição de site de jogos retros - Consoles e arcades</h3>
-<p>Essa página está sendo elaborada com o intuito de servir de treinamento na criação de página na linguagem 
-HTML.</p>
-<p><strong><a href="https:"https://www.emulatorgames.net/net/roms/name/"litle="Arcade">Arcade</a>-> hre="https://pt.wikpedia.org/wiki/Lista de consoles de jogos eletr%C3%B4nicos"
-    litle="Consoles">Consoles</a> - <a href="https://www.mybandonware.com/
-    litle= "abandonware games</a></a><strong></p>
-        <h4>Nossas propriedades:</h4>
+	<head>
+		<meta charset="UTF-8">
+		<title>Barbearia Alura</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
 
-        <center>
-        div class="row">
-        <div class="coluna">
-        <a href="https://www.emulatorgames.net/">
-            <img src="emulatores.jpg" alt="emulatores"> ltle="Emuladores" style= "width:80%">
-        </a>
-        </div>
-        <div class="coluna">
-            <a href="https://wwwemulatorgames.net/roms/sega-geneisis">
-                
+	<body>
+		<header>
+			<h1 class="titulo-principal">Barbearia Alura</h1>
+		</header>
+		<img id="banner" src="banner.jpg">
+		<div class="principal">
+			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+	 
+			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
+			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
+			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+		</div>
 
+		<div class="beneficios">
+			<h3 class="titulo-centralizado">Benefícios</h3>
 
+			<ul>
+				<li class="itens">Atendimento aos Clientes</li>
+				<li class="itens">Espaço diferenciado</li>
+				<li class="itens">Localização</li>
+				<li class="itens">Profissionais Qualificados</li>
+			</ul>
 
+			<img src="beneficios.jpg" class="imagembeneficios">
+		</div>
+	</body>
+</html>
